Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -3,12 +3,13 @@ title: 'CTA'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
-### **4.2.5. CTA** 
+
+### **4.2.5. CTA**
 
 **Tổng quan**
 
-* **Hiển thị tiêu đề:**  
-  * Người dùng nhấn nút ![][image172]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần CTA. Ví dụ, nếu tiêu đề là "Nhận thông tin khuyến mãi từ chúng tôi" thì phần CTA sẽ như thế này
+- **Hiển thị tiêu đề:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần CTA. Ví dụ, nếu tiêu đề là "Nhận thông tin khuyến mãi từ chúng tôi" thì phần CTA sẽ như thế này
 
 <Frame caption="Tiêu đề CTA  ">
   <img
@@ -19,33 +20,33 @@ icon: "circle-user"
   />
 </Frame>
 
-* **Kích thước/ Màu sắc:**  
-  * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại ![][image174]  
-* **Hiển thị nút quan tâm:**  
-  * Người dùng nhấn nút ![][image175]để chuyển đổi qua lại giữa 2 trạng thái có nút quan tâm OA và không có nút quan tâm OA  
-* **Hiển thị nút tạo lối tắt:**  
-  * Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có nút tạo lối tắt và không có nút tạo lối tắt  
-  * **Hiển thị nút liên hệ:**
+- **Kích thước/ Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại ![][image174]
 
-    Người dùng nhấn nút ![][image176]để chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ
+- **Hiển thị nút quan tâm:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút quan tâm OA và không có nút quan tâm OA
 
-    
+- **Hiển thị nút tạo lối tắt:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút tạo lối tắt và không có nút tạo lối tắt
+  - **Hiển thị nút liên hệ:**
+    Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút liên hệ và không có nút liên hệ
 
-* **Nền**  
-  * Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image160]  
-  * Xóa màu nền bằng cách nhấn nút ![][image161]  
-* **Bo góc**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]  
-* **Viền**  
-  * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]  
-  * Chọn màu cho viền bằng cách nhấn ô vuông ![][image165]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image166]  
-  * Xóa viền bằng cách nhấn nút ![][image167]  
-* **Đổ bóng**  
-  * Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]  
-  * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169]sau đó chọn màu  
-  * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image170]  
-  * Xóa đổ bóng bằng cách nhấn nút ![][image171]
+- **Nền**
+  - Chọn màu nền cho phần CTA bằng cách nhấn ô vuông ![][image159] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
+- **Bo góc**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần CTA tại ô nhập ![][image162] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image163]
 
+- **Viền**
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần CTA tại ô nhập ![][image164]
+  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image165] sau đó chọn màu
+  - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+  - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- **Đổ bóng**
+  - Người dùng có thể chọn độ lớn đổ bóng của phần CTA tại ô ![][image168]
+  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image169] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} /> 
+  - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
