--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -3,11 +3,12 @@ title: 'Support'
 description: 'Description of your new file.'
 icon: "circle-user"
 ---
-### **4.2.8. Support** 
 
-* **Dữ liệu**  
-* **Thêm dữ liệu mới:**  
-* **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+### **4.2.8. Support**
+
+- **Dữ liệu**
+- **Thêm dữ liệu mới:**
+- **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
 <Frame caption="Nút thêm dữ liệu mới ">
   <img
@@ -18,10 +19,7 @@ icon: "circle-user"
   />
 </Frame>
 
-
-
-
-* **Bước 2:** Người dùng nhập tên,  nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+- **Bước 2:** Người dùng nhập tên,  nhấn "**Tải ảnh lên hoặc chọn ảnh từ thư viện**" và chọn đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
 
 <Frame caption="Thêm dữ liệu  ">
   <img
@@ -32,10 +30,10 @@ icon: "circle-user"
   />
 </Frame>
 
+- **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
 
-  * **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Chỉnh sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image202]để đến trang chỉnh sửa
+- **Chỉnh sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
 <Frame caption="Nút chỉnh sửa ">
   <img
@@ -46,7 +44,7 @@ icon: "circle-user"
   />
 </Frame>
 
-  * **Bước 2**: Người dùng thay đổi tên, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
+  - **Bước 2**: Người dùng thay đổi tên, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện” và sửa đường dẫn đến trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này)
 
 <Frame caption="Chỉnh sửa dữ liệu   ">
   <img
@@ -57,10 +55,10 @@ icon: "circle-user"
   />
 </Frame>
 
+  - **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
 
-  * **Bước 3:** Người dùng nhấn **"**Lưu chỉnh sửa**" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image205]để xóa dữ liệu
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
 <Frame caption="Nút xóa dữ liệu ">
   <img
@@ -71,8 +69,7 @@ icon: "circle-user"
   />
 </Frame>
 
- 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
+  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn **Xóa ngay** để tiến hành xóa hoặc nhấn **Hủy** để hủy quá trình xóa dữ liệu
 
 <Frame caption=" ">
   <img
@@ -83,16 +80,13 @@ icon: "circle-user"
   />
 </Frame>
 
-
 **Tổng quan:**
 
-* **Hiển thị hình ảnh:**  
-  * Người dùng nhấn nút ![][image338]để chuyển đổi qua lại giữa 2 trạng thái có hình ảnh hỗ trợ và không có hình ảnh hỗ trợ. Nếu bật, người dùng có thể điều chỉnh kích thước của hình ảnh.  
-* **Kích thước:**  
-  * Người dùng có thể chọn hoặc tăng/giảm chung kích thước của hình ảnh theo chiều rộng và chiều dài tại ![][image339]  
-* **Hiển thị nội dung:**  
-  * Người dùng nhấn nút ![][image340]để chuyển đổi qua lại giữa 2 trạng thái có nội dung hỗ trợ và không có nội dung hỗ trợ  
-* **Kích thước /Màu sắc:**  
-  * Người dùng có thể điều chỉnh kích thước và màu sắc cho nội dung hỗ trợ tại ![][image327]
-
-
+- **Hiển thị hình ảnh:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hình ảnh hỗ trợ và không có hình ảnh hỗ trợ. Nếu bật, người dùng có thể điều chỉnh kích thước của hình ảnh.
+- **Kích thước:**
+  - Người dùng có thể chọn hoặc tăng/giảm chung kích thước của hình ảnh theo chiều rộng và chiều dài tại ![][image339]
+- **Hiển thị nội dung:**
+  - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nội dung hỗ trợ và không có nội dung hỗ trợ
+- **Kích thước /Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho nội dung hỗ trợ tại ![][image327]
