--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -3,12 +3,13 @@ title: "Products"
 description: "Description of your new file."
 icon: "circle-user"
 ---
-### **4.2.4. Products** 
+
+### **4.2.4. Products**
 
 **Dữ liệu**
 
-* **Thêm dữ liệu mới:**  
-  * **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
+- **Thêm dữ liệu mới:**
+  - **Bước 1:** Người dùng nhấn vào nút "Thêm dữ liệu mới"
 
 <Frame caption="Thêm dữ liệu mới ">
   <img
@@ -19,8 +20,7 @@ icon: "circle-user"
   />
 </Frame>
 
-
-  * **Bước 2**: Người dùng nhập tiêu đề sản phẩm, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+  - **Bước 2**: Người dùng nhập tiêu đề sản phẩm, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
 
 <Frame caption="Màn hình thêm dữ liệu ">
   <img
@@ -31,11 +31,11 @@ icon: "circle-user"
   />
 </Frame>
 
- 
-  * **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm sản phẩm hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu  
-* **Sửa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image250]để đến trang chỉnh sửa  
-     
+  - **Bước 3:** Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm sản phẩm hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+
+- **Sửa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
+
 <Frame caption="Nút chỉnh sửa ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image39_16123be01c.png"
@@ -43,10 +43,9 @@ icon: "circle-user"
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
-</Frame>  
+</Frame>
 
-
-* **Bước 2:** Người dùng sửa tiêu đề sản phẩm, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
+  - **Bước 2:** Người dùng sửa tiêu đề sản phẩm, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
 
 <Frame caption="Màn hình chỉnh sửa dữ liệu  ">
   <img
@@ -56,10 +55,11 @@ icon: "circle-user"
     title=""
   />
 </Frame>
- 
-  * **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho sản phẩm hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu  
-* **Xóa:**  
-  * **Bước 1:** Người dùng nhấn vào nút ![][image253]để xóa dữ liệu
+
+  - **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho sản phẩm hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+
+- **Xóa:**
+  - **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
 <Frame caption="Nút xóa   ">
   <img
@@ -70,11 +70,11 @@ icon: "circle-user"
   />
 </Frame>
 
+  - **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa sản phẩm hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
 
-  * **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa sản phẩm hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu  
-* **Tổng quan**  
-  * **Hiển thị tiêu đề:**  
-    * Người dùng nhấn nút ![][image123]để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần sản phẩm. Ví dụ, nếu tiêu đề là "Đây là tiêu đề phần sản phẩm" thì phần sản phẩm sẽ như thế này
+- **Tổng quan**
+  - **Hiển thị tiêu đề:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần sản phẩm. Ví dụ, nếu tiêu đề là "Đây là tiêu đề phần sản phẩm" thì phần sản phẩm sẽ như thế này
 
 <Frame caption="Tiêu đề sản phẩm   ">
   <img
@@ -85,90 +85,98 @@ icon: "circle-user"
   />
 </Frame>
 
+  - **Kích thước/ Màu sắc**:
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image125]
 
-  * **Kích thước/ Màu sắc**:  
-    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image125]  
-  * **Hiển thị phụ đề:**  
-    * Người dùng nhấn nút ![][image256]để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho phần sản phẩm. Ví dụ, nếu phụ đề là "Xem thêm" thì phần sản phẩm sẽ như thế này
+  - **Hiển thị phụ đề:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có phụ đề và không có phụ đề, ngoài ra người dùng có thể nhập phụ đề cho phần sản phẩm. Ví dụ, nếu phụ đề là "Xem thêm" thì phần sản phẩm sẽ như thế này
 
-![][image257]
+<Frame caption="Phụ đề sản phầm">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image27_11b5af05ce.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-* Phụ đề sản phầm  
-  * **Kích thường/ Màu sắc:**  
-    * Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image258]  
-  * **Link phụ đề khi nhấn:**  
-    * Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại ![][image259]  
-* **Danh sách thẻ**  
-  * **Lề ngoài**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image260]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image261]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image262]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image263]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image264]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image265]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image266]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image267]  
-  * **Nền**  
-    * Chọn màu nền cho phần danh sách sản phẩm bằng cách nhấn ô vuông ![][image268]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image269]  
-    * Xóa màu nền bằng cách nhấn nút ![][image270]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần danh sách sản phẩm tại ô nhập ![][image271]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image272]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần danh sách sản phẩm tại ô nhập ![][image273]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image274]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image275]  
-    * Xóa viền bằng cách nhấn nút ![][image276]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của phần danh sách sản phẩm tại ô ![][image277]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image278]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image279]  
-    * Xóa đổ bóng bằng cách nhấn nút ![][image280]  
-* **Chi tiết thẻ**  
-  * **Lề ngoài**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135]tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]  
-  * **Lề trong**  
-    * Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]  
-    * Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139]tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]  
-  * **Chiều cao**  
-    * Người dùng có thể chọn hoặc tăng/giảm chiều cao của các thẻ sản phẩm tại ![][image281]  
-  * **Nền**  
-    * Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút ![][image121]  
-    * Xóa màu nền bằng cách nhấn nút ![][image122]  
-  * **Bo góc**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141]hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]  
-  * **Viền**  
-    * Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]  
-    * Chọn màu cho viền bằng cách nhấn ô vuông ![][image144]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút ![][image145]  
-    * Xóa viền bằng cách nhấn nút ![][image146]  
-  * **Đổ bóng**  
-    * Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]  
-    * Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148]sau đó chọn màu  
-    * Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút ![][image149]  
-    * Xóa đổ bóng bằng cách nhấn nút ![][image150]  
-  * **Hiển thị tên sản phẩm**:  
-    * Người dùng nhấn nút ![][image108]để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm  
-  * **Hiển thị danh mục:**  
-    * Người dùng nhấn nút ![][image109]để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục  
-  * **Hiển thị giá tiền:**  
-    * Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]  
-  * **Hiển thị giá giảm:**  
-    * Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc![][image111]  
-  * **Sản phẩm Sale:**  
-    * Người dùng nhấn nút ![][image112]để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale  
-  * **Hiển thị nhãn:**  
-    * Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.  
-  * **Hiển thị yêu thích:**  
-    * Người dùng nhấn nút ![][image114]để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích  
-  * **Hiển thị đánh giá**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá  
-  * **Hiển thị số lượng yêu thích**  
-    * Người dùng nhấn nút ![][image115]để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích  
-  * **Hiển thị số lượng đã bán:**  
-    * Người dùng nhấn nút ![][image116]để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán  
-  * **Hiển thị giỏ hàng:**  
-    * Người dùng nhấn nút ![][image117]để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
+  - **Kích thường/ Màu sắc:**
+    - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại ![][image258]
+  - **Link phụ đề khi nhấn:**
+    - Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại ![][image259]
 
-		**Kiểu nút giỏ hàng:** 
+- **Danh sách thẻ**
+  - **Lề ngoài**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image260] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image261]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các phần tử khác của phần sản phẩm bằng nút ![][image262] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image263]
+  - **Lề trong**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image264] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image265]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa danh sách sản phẩm với các hình ảnh sản phầm bên trong bằng nút ![][image266] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image267]
+  - **Nền**
+    - Chọn màu nền cho phần danh sách sản phẩm bằng cách nhấn ô vuông ![][image268] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Bo góc**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của phần danh sách sản phẩm tại ô nhập ![][image271] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image272]
+  - **Viền**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của phần danh sách sản phẩm tại ô nhập ![][image273]
+    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image274] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Đổ bóng**
+    - Người dùng có thể chọn độ lớn đổ bóng của phần danh sách sản phẩm tại ô ![][image277]
+    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image278] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- **Chi tiết thẻ**
+  - **Lề ngoài**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
+  - **Lề trong**
+    - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
+    - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
+  - **Chiều cao**
+    - Người dùng có thể chọn hoặc tăng/giảm chiều cao của các thẻ sản phẩm tại ![][image281]
+  - **Nền**
+    - Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Bo góc**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của thẻ sản phẩm tại ô nhập ![][image141] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image142]
+  - **Viền**
+    - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của thẻ sản phẩm tại ô nhập ![][image143]
+    - Chọn màu cho viền bằng cách nhấn ô vuông ![][image144] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Đổ bóng**
+    - Người dùng có thể chọn độ lớn đổ bóng của thẻ sản phẩm tại ô ![][image147]
+    - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image148] sau đó chọn màu
+    - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+    - Xóa đổ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - **Hiển thị tên sản phẩm**:
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
+  - **Hiển thị danh mục:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
+  - **Hiển thị giá tiền:**
+    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
+  - **Hiển thị giá giảm:**
+    - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc ![][image111]
+  - **Sản phẩm Sale:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
+  - **Hiển thị nhãn:**
+    - Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
+  - **Hiển thị yêu thích:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
+  - **Hiển thị đánh giá**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá
+  - **Hiển thị số lượng yêu thích**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
+  - **Hiển thị số lượng đã bán:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán
+  - **Hiển thị giỏ hàng:**
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
+
+**Kiểu nút giỏ hàng:**
 
 Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
